# mcp-news

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  news_grab.py  publish.sh  pyproject.toml  requirements.txt
src/mcp_news/: __init__.py  __main__.py  server.py
tests/: test_news_grab.py
