[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-news"
version = "1.0.0"
description = "MCP server that collects articles from 1100+ RSS feeds across 150+ countries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Benjamin MARCHAND" },
]
keywords = ["mcp", "news", "rss", "feeds"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.28",
    "mcp[cli]>=1.26",
]

[project.scripts]
mcp-news = "mcp_news.server:main"

[project.urls]
Repository = "https://github.com/benjaminmarchand/mcp-news"

[tool.pytest.ini_options]
testpaths = ["tests"]
